# aoc2021

./: Cargo.toml
src/: c01.rs  c01a.rs  c02.rs  c02a.rs  c03.rs  c03a.rs  c05.rs  c05a.rs  c06.rs  c06a.rs  c07.rs  c07a.rs  c09.rs  c09a.rs  c10.rs  c10a.rs  c11.rs  c11a.rs  c12.rs  c12a.rs  c13.rs  c13a.rs  c14.rs  c14a.rs  c15.rs  c15a.rs  c17a.rs  c18.rs  c18a.rs
