[package]
name = "advent"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c01"
path = "src/c01.rs"

[[bin]]
name = "c01a"
path = "src/c01a.rs"

[[bin]]
name = "c02"
path = "src/c02.rs"

[[bin]]
name = "c02a"
path = "src/c02a.rs"

[[bin]]
name = "c03"
path = "src/c03.rs"

[[bin]]
name = "c03a"
path = "src/c03a.rs"

[[bin]]
name = "c06"
path = "src/c06.rs"

[[bin]]
name = "c06a"
path = "src/c06a.rs"

[[bin]]
name = "c11"
path = "src/c11.rs"

[[bin]]
name = "c11a"
path = "src/c11a.rs"

[dependencies]
